spark distributed computing works