@@ -6,14 +6,14 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Scanner;
 import java.util.Set;
+import java.util.stream.Stream;
 
-import org.apache.commons.csv.CSVFormat;
-import org.apache.commons.csv.CSVParser;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.cz.CzechAnalyzer;
 import org.apache.lucene.analysis.hu.HungarianAnalyzer;
@@ -38,11 +38,29 @@ import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 
 public class LuceneManager {
-    private CSVParser getParser(String uri) throws IOException {
-        return CSVParser.parse(
-            Files.newBufferedReader(Path.of(uri)),
-            CSVFormat.DEFAULT.builder().setHeader().setSkipHeaderRecord(true).build()
-        );
+    private Stream<HashMap<String, String>> getStream(String uri) throws IOException {
+        var type = new TypeToken<HashMap<String, String>>(){}.getType();
+        var gson = new Gson();
+        return Files
+            .walk(Paths.get(uri))
+            .filter(Files::isRegularFile)
+            .filter(file -> file.getFileName().toString().endsWith(".json"))
+            .map(file -> {
+                List<HashMap<String, String>> json = new ArrayList<>();
+                try {
+                    var reader = Files.newBufferedReader(file);
+                    var line = "";
+                    while ((line = reader.readLine()) != null) {
+                        HashMap<String, String> map = gson.fromJson(line, type);
+                        json.add(map);
+                    }
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+                return json;
+            })
+            .flatMap(List::stream)
+            .parallel();
     }
 
     private HashMap<String, List<String>> getIdMapping(String lang) throws IOException {
@@ -216,17 +234,17 @@ public class LuceneManager {
         var directory = FSDirectory.open(Path.of("index", lang));
 
         Analyzer analyzer = null;
-        CSVParser parser = null;
+        Stream<HashMap<String, String>> stream = null;
 
         if (lang.equals("sk")) {
             analyzer = new CzechAnalyzer();
-            parser = getParser("documents-sk.csv");
+            stream = getStream("documents-sk-spark");
         } else if (lang.equals("cs")) {
             analyzer = new CzechAnalyzer();
-            parser = getParser("documents-cs.csv");
+            stream = getStream("documents-cs-spark");
         } else if (lang.equals("hu")) {
             analyzer = new HungarianAnalyzer();
-            parser = getParser("documents-hu.csv");
+            stream = getStream("documents-hu-spark");
         } else {
             throw new NullPointerException("Analyzer|CSVParser is null");
         }
@@ -234,12 +252,15 @@ public class LuceneManager {
         var config = new IndexWriterConfig(analyzer);
         var iwriter = new IndexWriter(directory, config);
 
-        for (var record : parser) {
+        var it = stream.iterator();
+
+        while (it.hasNext()) {
+            var record = it.next();
             var doc = new Document();
 
             var id = record.get("id");
-            var title = record.get(lang + "_title");
-            var text = record.get(lang + "_text");
+            var title = record.get("title");
+            var text = record.get("text");
 
             doc.add(new StringField("id", id, Field.Store.YES));
             doc.add(new TextField("title", title, Field.Store.YES));
@@ -248,7 +269,7 @@ public class LuceneManager {
             iwriter.addDocument(doc);
         }
         iwriter.close();
-        parser.close();
+        stream.close();
         analyzer.close();
     }
 }
